fix navbar always on the top. add link to all navbar buttons. Fix navbar animation and responsive design on mobile

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,11 +3,14 @@
 
 .navbar{
     /* background-color: cyan; */
-    padding: 2em 5em;
+    padding: 1.5em 5%;
     text-align: justify;
     /* font-family: 'Montserrat', sans-serif; */
     font-family: 'Sen', sans-serif;
     font-weight: 400;
+    // border: 1px solid white;
+    // box-shadow: 2px 2px 20px 0px gray;
+   
   }
   
   .navbar-brand {
@@ -40,6 +43,6 @@
   .item:hover{ 
     color:black !important;
     background-color: white !important;
-    animation: navbarTab 1s ease-out;
+    animation: navbarTab 1s ease-out forwards;
   }
   
