--- a/src/App.scss
+++ b/src/App.scss
@@ -14,5 +14,12 @@
   margin: 30px 50px;
 }
 
+.title{
+  font-family: 'sen', sans-serif;
+  color: black;
+  font-weight: 800;
+  font-size: xx-large;
+  margin-top: 4em;
+}
 
 
