fix responsive font sizes.

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -14,7 +14,7 @@
     margin: 5em 4em;
     font-family: 'sen', sans-serif; 
     font-weight: 500;
-    font-size: 2em;
+    font-size: 6vmin;
     color: black;
     animation: aboutText 1s ease-in;
   }
@@ -23,7 +23,7 @@
     font-family: 'sen', sans-serif;
     color: black;
     font-weight: 800;
-    font-size: 2em;
+    font-size: 7vmin;
   }
   
   @keyframes aboutMe{
