--- a/src/App.scss
+++ b/src/App.scss
@@ -3,23 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Roboto:ital,wght@1,100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sen&display=swap');
-// @import '~styles/_colors.scss';
+@import './index.scss';
 
 
-/* Custom Properties */
-:root{
-  // Custom Vars
-  //   body{
-  //   width: 50%;
-  //   height: 100vh;
-  //   background-color: white;
-  // }
-}
-
-#pages{
+#content-page{
   animation: page-anim 3s ease forwards 4.5s ;
   opacity: 0;
-
 }
 
 @keyframes page-anim{
@@ -31,12 +20,7 @@
   }
 }
 
-#welcome_page{
-  *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
+#welcome-page{
 
   #logo{
     width: 50%;
@@ -44,9 +28,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /* animation: fill 0.5s ease forwards 1.7s; */
     animation: name-anim 1.0s ease forwards 3.5s;
-    
+    /* animation: fill 0.5s ease forwards 1.7s; */
   }
   
   #logo path:nth-child(1){
@@ -57,186 +40,131 @@
     stroke-dasharray: 349.48;
     stroke-dashoffset: 349.48;
     animation: line-anim 2s ease forwards;
-  
-    
   }
   
   #logo path:nth-child(3){  /* A */
     stroke-dasharray: 357.80;
     stroke-dashoffset: 357.80;
     animation: line-anim 2s ease forwards 0.1s;
-  
-    
   }
   
   #logo path:nth-child(4){  /* T */
     stroke-dasharray: 243.10;
     stroke-dashoffset: 243.10;
     animation: line-anim 2s ease forwards 0.2s;
-  
-    
   }
   
   #logo path:nth-child(5){  /* R */
     stroke-dasharray: 405.30;
     stroke-dashoffset: 405.30;
     animation: line-anim 2s ease forwards 0.3s;
-    
   }
   
   #logo path:nth-child(6){ /* I */
     stroke-dasharray: 148.60;
     stroke-dashoffset: 148.60;
     animation: line-anim 2s ease forwards 0.4s;
-  
-    
   }
   
   #logo path:nth-child(7){ /* C */
     stroke-dasharray: 310.14;
     stroke-dashoffset: 310.14;
     animation: line-anim 2s ease forwards 0.5s;
-  
   }
   
   #logo path:nth-child(8){  /* I */
     stroke-dasharray: 148.60;
     stroke-dashoffset: 148.60;
     animation: line-anim 2s ease forwards 0.6s;
-  
-    
   }
   
   #logo path:nth-child(9){  /* A */
     stroke-dasharray: 357.80;
     stroke-dashoffset: 357.80;
     animation: line-anim 2s ease forwards 0.7s;
-  
-    
   }
   
   #logo path:nth-child(10){  /* R */
     stroke-dasharray:  405.30;
     stroke-dashoffset:  405.30;
     animation: line-anim 2s ease forwards 0.8s;
-  
-  
-    
   }
   
   #logo path:nth-child(11){  /* E */
     stroke-dasharray: 376.90;
     stroke-dashoffset: 376.90;
     animation: line-anim 2s ease forwards 0.9s;
-  
-    
   }
   
   #logo path:nth-child(12){   /* I */
     stroke-dasharray: 148.60;
     stroke-dashoffset: 148.60;
     animation: line-anim 2s ease forwards 1.0s;
-  
-  
-    
   }
   
   #logo path:nth-child(13){  /* A */
     stroke-dasharray:  357.80;
     stroke-dashoffset:  357.80;
     animation: line-anim 2s ease forwards 1.1s;
-  
-  
-    
   }
   
   #logo path:nth-child(14){  /* S */
     stroke-dasharray: 337.64;
     stroke-dashoffset: 337.64;
     animation: line-anim 2s ease forwards 1.2s;
-  
-    
-  
   }
   
   #logo path:nth-child(15){   /* I */
     stroke-dasharray: 148.60;
     stroke-dashoffset: 148.60;
     animation: line-anim 2s ease forwards 1.3s;
-  
-  
-  
-    
   }
-  
   
   #logo path:nth-child(16){  /* L */
     stroke-dasharray: 223.87;
     stroke-dashoffset: 223.87;
     animation: line-anim 2s ease forwards 1.4s;
-    
-  
   } 
   
   #logo path:nth-child(17){  /* V */
     stroke-dasharray: 296.53;
     stroke-dashoffset: 296.53;
     animation: line-anim 2s ease forwards 1.5s;
-  
-    
   }
   
   #logo path:nth-child(18){  /* A */
     stroke-dasharray: 357.80;
     stroke-dashoffset: 357.80;
     animation: line-anim 2s ease forwards 1.6s;
-  
-    
   }
   
   #logo path:nth-child(19){ /* . */
     stroke-dasharray: 32.67;
     stroke-dashoffset: 32.67;
     animation: line-anim 2s ease forwards 1.7s;
-    
-  
   } 
   
   @keyframes line-anim{
     to{
-        stroke-dashoffset: 0;
+      stroke-dashoffset: 0;
     }
   }
-  
-  @keyframes fill{
-    from {
-        fill: transparent;
-    }
-    to{
-        fill: black;
-    }
-  }
+
   @keyframes name-anim{
     to{
         opacity: 0;
     }
   }
   
-  
-  
-  
-  
-  .box-text{
-    margin: 30px 50px;
-  }
-  
-  .title{
-    font-family: 'sen', sans-serif;
-    color: black;
-    font-weight: 800;
-    font-size: xx-large;
-    margin-top: 4em;
-  }
+  // @keyframes fill{
+  //   from {
+  //       fill: transparent;
+  //   }
+  //   to{
+  //       fill: black;
+  //   }
+  // }
+
 }
 
 
