--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,3 +1,4 @@
+
 @keyframes aboutText{
     0%{
       right:  10px;
@@ -42,7 +43,7 @@
   
   .social-media{
     animation: aboutMe 1s ease-in;
-    margin-bottom: 7em;
+    margin-bottom: 6em;
     text-align: center;
 
    
@@ -59,8 +60,21 @@
   .pictures{
     width: 70%;
     margin: auto;
+    margin-bottom: 4em;
   }
 
+
+  .plain-text{
+    font-size: 20px;
+    color: black;
+    font-weight: 400;
+    // width: 70%;
+    margin-left: 30%;
+    margin-right: 30%;
+    text-align: justify;
+   
+
+  }
   @media only screen and (max-width: 501px ){
    
     .about-text{
@@ -77,6 +91,9 @@
 
     .media-icon:not(:nth-child(1)){
       margin-left: 2em;
+    }
+    .plain-text{
+      margin: 2em;
     }
     
   }
