--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,37 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+// CUSTOM PROPERTIES
+
+
+// set up color
+:root{
+  --text-color: black;
+  --icon-color: black;
+  --icon-hover-color: gray;
+
+  --normal-text: 2vmin;
+  --brand-text-tablet: calc(var(--normal-text) * 1.5);
+  --brand-text-mobile: calc(var(--normal-text) * 1.2);
+  --brand-text: 2vmin;
+
+}
+
+
+// set up mixins for responsive design
+@mixin screen-size($size) {
+  @if $size == mobile {
+    @media screen and (max-width: 640px) { @content; }
+  }
+  @else if $size == tablet {
+    @media screen and (max-width: 768px) { @content; }
+  }
+  @else if $size == desktop {
+    @media screen and (max-width: 1024px) { @content; }
+  }
+}
+
+
