--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -41,9 +41,9 @@
     @include screen-size(tablet) {
       font-size: var(--brand-text-tablett);
     }
-    @include screen-size(mobile) {
-      font-size: var(--brand-text-mobile);
-    }
+    // @include screen-size(mobile) {
+    //   font-size: var(--brand-text-mobile);
+    // }
   }
   
   .item{
