--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,4 +1,18 @@
+@import '../../index.scss';
+
 .footer{
-    background-color: cadetblue;
-    color: white;
+    text-align: center;
+    font-family: 'sen', sans-serif; 
+    font-weight: medium; //500
+    font-size: 2vmin;
+    color: black;
+    padding: 3rem 1.5rem 0.5rem !important;
+    
+    .footer-social{
+        .div-content{
+            margin-top: 2vmin;
+            margin-bottom: 6vmin;
+        }
+    }
+
 }
