--- a/src/index.scss
+++ b/src/index.scss
@@ -32,18 +32,36 @@ code {
   section{
     margin-left: 10%;
     margin-right: 10%;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
+    padding-top: 5em;
+
+    :last-child{
+      margin-bottom: 0 !important;
+    }
+  }
+  
+  h1{
+    margin-top: 4vmin;
+  }
+  
+  .title{
+    font-family: 'sen', sans-serif;
+    color: black;
+    font-weight: 800;
+    font-size: xx-large;
+    
   }
   
   .div-content{
     margin-bottom: 8vmin;
     
   }
-  .regular-text{
-    text-align: justify;
-    font-family: 'Sen', sans-serif;
+
+  .plain-text{
     font-weight: 400;
-    // color: black;
+    text-align: justify;
+    font-family: 'Sen', sans-serif; 
+    // color: red;
 
   }
 
