--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,7 +4,7 @@
     text-align: center;
     font-family: 'sen', sans-serif; 
     font-weight: medium; //500
-    font-size: 2.5vmin;
+    font-size: var(--normal-text);
     color: black;
     padding: 3rem 1.5rem 0.5rem !important;
     
