--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -1,62 +1,49 @@
 .works-list{
     display: flex;
     flex-flow:  wrap;
-    background-image: url('../../me3.png') ;
     justify-content: space-evenly; 
+    // background-image: url('../../me3.png') ;
   }
-  .work-item{
-    background-color:inherit; 
-    /* #a7d5d2; */
-    font-family: 'Sen', sans-serif;
-    font-weight: 400;
-    color: black;
-    border-radius: 5%;
-    width: 15em;
-    height: 15em;
-    margin: 2em 2em ;
-    padding: 2em 2em;
-    // filter: blur(10px);
-   
-  }
+ 
   
   
-  .App {
-    text-align: center;
-  }
+  // .App {
+  //   text-align: center;
+  // }
   
-  .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
+  // .App-logo {
+  //   height: 40vmin;
+  //   pointer-events: none;
+  // }
   
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
-    }
-  }
+  // @media (prefers-reduced-motion: no-preference) {
+  //   .App-logo {
+  //     animation: App-logo-spin infinite 20s linear;
+  //   }
+  // }
   
-  .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
+  // .App-header {
+  //   background-color: #282c34;
+  //   min-height: 100vh;
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  //   justify-content: center;
+  //   font-size: calc(10px + 2vmin);
+  //   color: white;
+  // }
   
-  .App-link {
-    color: #61dafb;
-  }
+  // .App-link {
+  //   color: #61dafb;
+  // }
   
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
+  // @keyframes App-logo-spin {
+  //   from {
+  //     transform: rotate(0deg);
+  //   }
+  //   to {
+  //     transform: rotate(360deg);
+  //   }
+  // }
   
   
