--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -33,12 +33,17 @@
     font-family: 'krona one', sans-serif;
     font-size: var(--normal-text);
   }
-  
   .brand-name {
     align-self: center; 
-    font-size: 10px;
-    font-size: 2.5vmin;
+    // font-size: 10px;
+    font-size: 90%;
+    @include screen-size(mobile){
+      font-size: 100%
+    }
+
+
   }
+  
   
   .item{
     margin-left: 2em;
