add new size dor name brand on mobile

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -38,7 +38,7 @@
     // font-size: 10px;
     font-size: 90%;
     @include screen-size(mobile){
-      font-size: 100%
+      font-size: 12px;
     }
 
 
