--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -3,6 +3,32 @@
     flex-flow:  wrap;
     justify-content: space-evenly; 
     // background-image: url('../../me3.png') ;
+
+    &>:nth-child(1){
+      .content-image{
+        background-color: aliceblue;
+      }
+    }
+    &>:nth-child(2){
+      .content-image{
+        background-color: beige;
+      }
+    }
+    &>:nth-child(3){
+      .content-image{
+        background-color: papayawhip;
+      }
+    }
+    &>:nth-child(4){
+      .content-image{
+        background-color: lavender;
+      }
+    }
+    &>:nth-child(5){
+      .content-image{
+        background-color: lighten($color: darkseagreen, $amount: 25) //darkseagreen;
+      }
+    }
   }
  
   
