--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -40,7 +40,7 @@
     }
 
     &.box{
-      padding: 2rem;
+      padding: 3%;
       margin-bottom: 10%;
       &:last-child{
         margin-bottom: 2.5rem;
