--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -2,91 +2,82 @@
 
 
 .work-item{
-    // background-color: cadetblue; 
-    /* #a7d5d2; */
-    // font-family: 'Sen', sans-serif;
-    // font-weight: 400;
-    // color: black;
-    // border-radius: 5%;
-    // width: 15em;
-    // height: 15em;
-    // margin: 2em 2em ;
-    // padding: 2em 2em;
-    // filter: blur(10px);
 
-    max-width: 40%;
-    margin: 5%;
+  max-width: 40%;
+  margin: 5%;
+
+  @include screen-size(mobile){
+    max-width: 100%;
+    margin: 0;
+
+  }
+
+  @include screen-size(tablet){
+    max-width: 100% ;
+    margin: 0;
+  }
 
 
-    @include screen-size(tablet){
-      max-width: 100%;
+  
+  &:hover{
+    animation: hover-project .5s ease-in forwards;
+  }
+
+  &.box{
+    margin-bottom: 10%;
+    &>:last-child{
+      margin-bottom: 2.5rem;
     }
-
-    @include screen-size(mobile){
-      max-width: 100%;
-    }
-
-    @keyframes hover-project{
-      0%{
-        transform: scale(1);
-      }
-      100%{
-        transform: scale(1.04);
-
-      }
-    }
-    &:hover{
-      animation: hover-project .5s ease-in forwards;
-    }
-
-    &.box{
-      padding: 3%;
-      margin-bottom: 10%;
-      &:last-child{
-        margin-bottom: 2.5rem;
-      }
-    }
-    
-    .media{
-
+  }
+  
+  .media{
+    display: block;
+    .media-content{
+      padding: 5%;
       .content:not(:last-child){
         margin-bottom: 3.5rem;
       }
     }
+  }
+  
+  .empty-tag{
+    display: none;
+  }
     
-    .empty-tag{
-      display: none;
+  
+
+  .date-content{
+    .icon-calendar{
+      margin-right: .5rem;
+      vertical-align: text-bottom;
     }
-      
+  }
+
+  .image{
+    display: block;
+
+  }
+
+  
+
+  .level{
+    display: flex;
     
-
-    .date-content{
-      // margin-left: .5rem;
-      .icon-calendar{
-        margin-right: .5rem;
-        // margin-left: .5rem;
-        vertical-align: text-bottom;
-      }
-    }
-    .content-image{
-      // background-color: bisque;
-    }
-    .image{
-      display: block;
-      // background-color: cyan;
-
-    }
-
-    
-
-    .level{
-      display: flex;
-      
-      .level-item{
-        color: gray;
-        :hover{
-          color: black;
-        }
+    .level-item{
+      color: gray;
+      :hover{
+        color: black;
       }
     }
   }
+}
+
+@keyframes hover-project{
+  0%{
+    transform: scale(1);
+  }
+  100%{
+    transform: scale(1.04);
+
+  }
+}
